ui updated and some animation added

--- a/package.json
+++ b/package.json
@@ -8,20 +8,26 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
     "daisyui": "^2.15.0",
     "date-fns": "^2.28.0",
     "firebase": "^9.8.1",
     "install": "^0.13.0",
+    "leaflet": "^1.8.0",
     "npm": "^8.10.0",
     "react": "^18.1.0",
+    "react-countdown": "^2.3.2",
     "react-day-picker": "^8.0.5",
     "react-dom": "^18.1.0",
     "react-firebase-hooks": "^5.0.3",
     "react-hook-form": "^7.31.2",
+    "react-leaflet": "^4.0.2",
+    "react-moving-text": "^0.0.7",
     "react-query": "^3.39.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.1",
+    "swiper": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
